<resources>
    <string name="app_name">Labs20221-Gr10</string>
    <string name="info">Información Personal</string>
    <string name="nom">Nombre</string>
    <string name="ape">Apellido</string>
    <string name="sexo">Sexo</string>
    <string name="h">Hombre</string>
    <string name="m">Mujer</string>
    <string name="nacido">Fecha de Nacimiento</string>
    <string name="grado">Grado de Escolaridad</string>
    <string name="siguiente">Siguiente</string>
    <string name="cambiar">Cambiar</string>
    <string name="info2">Información de Contacto</string>
    <string name="tel">Télefono</string>
    <string name="email">Email</string>
    <string name="dir">Dirección</string>
    <string name="pais">País</string>
    <string name="ciudad">Ciudad</string>
    <string name="nacio">Birthday</string>
    <string name="seleccionesex">Seleccione sexo</string>
    <string name="escribanombre">No ha escrito nombre</string>
    <string name="escribaapellido">No ha escrito apellido</string>
    <string name="seleccionegrado">Seleccione un grado</string>
    <string name="escribatelefono">No has escrito un telefono</string>
    <string name="escribadireccion">No has escrito una direccion</string>
    <string name="escribaemail">No has escrito un email</string>
    <string name="copiarpais">No has escrito un pais</string>
    <string name="copiarciudad">No has escrito una ciudad</string>
    <string name="no_nacido">Ingresa la fecha de nacimiento</string>
    <string name="selected_item">Selected item:</string>

    <string-array name="Languages">
        <item>Grado de Escolaridad</item>
        <item>Primaria</item>
        <item>Secundaria</item>
        <item>Universitaria</item>
        <item>Otro</item>
    </string-array>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>